CGIV-8129 Corrected alignment for search box with reset of bulk action buttons

--- a/public/channelgrabber/products/scss/_products.scss
+++ b/public/channelgrabber/products/scss/_products.scss
@@ -406,7 +406,7 @@ span.product-status-holder {
     top: 49px;
     left: 0px;
     width: 340px;
-    padding: 10px;
+    padding: 11px 0 9px 10px;
     background-color: $color-xlgrey;
     #searchUIContainer {
         width: 220px;
